--- a/ppms_project/profilingApp/static/CSS/css/fstdropdown.css
+++ b/ppms_project/profilingApp/static/CSS/css/fstdropdown.css
@@ -11,7 +11,7 @@
 }
 .fstdropdown {
     vertical-align: middle;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
     font-family: inherit;
     font-size: inherit;
@@ -25,7 +25,7 @@
 
     .fstdropdown > .fstselected {
         line-height: 1.42857143;
-        padding: 6px 24px 6px 12px;
+        padding: 12px 20px;
         color: #FFFFFF;
         min-height: 100%;
         font-size: inherit;
@@ -42,7 +42,7 @@
             display: block;
             height: 0;
             margin-top: -3px;
-            content: ' ';
+            content: '';
             right: 11px;
             border-color: #FFFFFF transparent transparent;
             border-style: solid;
@@ -65,7 +65,8 @@
         display: none;
         max-height: 200px;
         overflow-y: auto;
-        overflow-x: hidden
+        overflow-x: hidden;
+        border-radius: 6 px;
     }
 
     .fstdropdown.open > .fstlist {
@@ -90,21 +91,22 @@
 }
 
 .fstlist > div:hover {
-    background-color: rgba(118, 118, 118);
+    background-color: #0d6efd;
     color: #FFFFFF;
 }
 
 .fstlist > div.selected {
-    background-color: rgba(118, 118, 118);
-    color: #FFFFFF;
+    background-color:rgb(229, 229, 229);
+    color: #188045;
 }
 
 .fstsearchinput {
-    padding: 4px;
+    
+    padding: 10px;
     width: 100%;
     box-sizing: border-box;
-    background-color: #fff;
-    border: 1px solid #ccc;
+    background-color: #ffffff;
+    border: 3px ridge #188045;
     color: #000000;
     font-size: 14px;
     display: none;
@@ -113,6 +115,8 @@
 .fstdropdown.open > .fstsearch {
     display: block;
     padding: 4px;
+    
+
 }
 
 .fstdropdown.open .fstsearchinput {
