Admin Window UI Updates

--- a/ppms_project/profilingApp/templates/activities/Admin - Set Password.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Set Password.html
@@ -52,7 +52,7 @@
 
                 <div class="d-flex justify-content-center">
                     <input class="btn btn-primary px-3" type="submit" name="Confirm" value="Reset" style="margin-right: 2%; background-color: rgb(44, 95, 34);">
-                    <a href=""><button type="button" style="background-color: #EF3A25; color: white;" class="btn">Cancel</button></a>
+                    <a href="{% url 'admin_userAccounts' %}"><button type="button" style="background-color: #EF3A25; color: white;" class="btn">Cancel</button></a>
                 </div>
             </form>
         </div>
