--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -179,10 +179,7 @@
                         </div>
                         <div class="card-body p-4">
                         
-                        <div class="table-responsive">
-                            <table class="table table-hover table-cell-border" id="preschoolers_table">
-                                
-                                <thead>
+                                 <thead>
                                     <tr>
                                         <th scope="col">No.</th>
                                         <th scope="col">First Name</th>
@@ -229,7 +226,10 @@
             </div>
         </div>
     </div>
-    --->
+    --->       <div class="table-responsive">
+                            <table class="table table-hover table-cell-border" id="preschoolers_table">
+                                
+                
     <!-- Footer -->
     <div class="footer text-muted">
         <div class="container">
