--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -41,11 +41,23 @@
                             </span></a>
                             
                         </a>
-                        <ul class="dropdown-menu dropdown-menu-end p-2" style="margin-right:3%;" aria-labelledby="parentButton">
-                            <div>
-                                <i class="fa fa-lg fa-fw fa-user bi" style="margin-left:5px;"></i>   
-                                <span style="font-size: 15px;"> {{ user.first_name }} {{ user.last_name }} </span>
-                            </div>
+                        <ul class="dropdown-menu dropdown-menu-end p-2 bg-white" style="margin-right:3%;" aria-labelledby="parentButton">
+                            <a class="text-dark bg-white"style="text-decoration: none;"href="">
+                                <div class="card">
+                                    <div class="row d-block">
+                                        <div class="d-flex justify-content-center my-2 rounded-circle">
+                                            <i class="fa fa-lg fa-fw fa-user bi" style="margin-left:5px;"></i>  
+                                        </div>
+                                         <div class="d-flex justify-content-center text-center p-2">  
+                                            <span style="font-size: 15px;"> {{ user.first_name }} {{ user.last_name }} </span>
+                                         </div>
+                                    </div>
+                                </div>
+                                <div class="card-footer d-flex align-items-center justify-content-center" style="height:30px;">
+                                    <p class="mt-3"style="font-size:15px;">View Profile</p>
+                                </div>
+                            </a>
+                            
                             <div>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" style="background-color: rgba(255, 255, 255, 0); padding: 2px !important; margin-left:7px;" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
